# dsl_chain_bench

./: .gitignore  LICENSE  README.md  compressed_kernels.cpp  compressed_tables.cpp  generate.py
benchmarks/: CMakeLists.txt  k_cache_bench.cpp  k_cache_inline.py  k_cache_sequential.py  nh_diffusion_stencil_01.py  nh_diffusion_stencil_01_bench.cpp  nh_diffusion_stencil_03.py  nh_diffusion_stencil_03_bench.cpp  nh_diffusion_stencil_09.py  nh_diffusion_stencil_09_bench.cpp  red_e_c_v.py  red_e_c_v_bench.cpp  red_e_c_v_inline.py  red_e_c_v_sequential.py  red_unroll_c_e_c_bench.cpp  red_unroll_c_e_c_inline.py  red_unroll_c_e_c_unroll.py  red_unroll_c_v_c_bench.cpp  red_unroll_c_v_c_inline.py  red_unroll_c_v_c_unroll.py  red_unroll_e_c_e_bench.cpp  red_unroll_e_c_e_inline.py  red_unroll_e_c_e_unroll.py  red_unroll_e_v_e_bench.cpp  red_unroll_e_v_e_inline.py  red_unroll_e_v_e_unroll.py  red_unroll_v_c_v_bench.cpp  red_unroll_v_c_v_inline.py  red_unroll_v_c_v_unroll.py  red_unroll_v_e_v_bench.cpp  red_unroll_v_e_v_inline.py  red_unroll_v_e_v_unroll.py  runner.sh  runner_k.sh  solve_nonhydro_stencil_10.py  solve_nonhydro_stencil_10_bench.cpp  solve_nonhydro_stencil_40.py  solve_nonhydro_stencil_40_bench.cpp  solve_nonhydro_stencil_50.py  solve_nonhydro_stencil_50_bench.cpp
benchmarks/utils/: CMakeLists.txt  atlasToGlobalGpuTriMesh.cpp  thrustUtils.cu  thrustUtils.h
templates/: red_chain.py  red_chain_bench.cpp  red_int_diff.py  red_int_diff_bench.cpp  red_simple.py  red_simple_bench.cpp  red_unroll.py  red_unroll_bench.cpp
